--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,7 @@
     "require": {
         "php": ">=5.3.3",
         "symfony/console": "2.*",
-        "symfony/yaml": "2.*",
-        "doctrine/migrations": "dev-master"
+        "symfony/yaml": "2.*"
     },
     "suggest": {
         "zendframework/zendframework": "2.0.*"
